Fix: Directory Sidebar spacing issue in Firefox

--- a/packages/directory/app/styles/navi-directory/components/dir-sidebar.less
+++ b/packages/directory/app/styles/navi-directory/components/dir-sidebar.less
@@ -16,7 +16,7 @@
 .dir-sidebar {
   color: @navi-blue-300;
   display: grid;
-  height: fit-content;
+  grid-template-rows: fit-content(50px);
 
   &__group {
     cursor: pointer;
